css/screen.css
body {
  font-family: skia, verdana, sans-serif;
  line-height: 1.3em;
  margin: 4em auto;
  max-width: 35em;
}



a {
  color: #4C4C4C;
  text-decoration: none;
  border-bottom: 1px solid;
}
a:visited { border: 0; }
a:hover, a:visited:hover { border-bottom: 2px solid; }

h1, h2, h3 {
  font-weight: normal;
  margin-bottom: 1em;
}

.clear { clear: both; }



#header {
  margin: 0 1em;
}

#content {
  margin: 0 4em;
}

#footer {
  margin: 1em 4em;
  font-size: 70%;
  text-align: right;
}


/** Posts list page **/
.posts {
  margin: 0 0 2em 0;
  padding: 0;
  list-style: none outside;
}

.posts li {
  min-height: 1.4em;
  clear: left;
}

.posts .post-date {
  position: absolute;
  font-family: courier;
}

.posts .post-name {
  float: left;
  margin-left: 5em;
}


/** Post show page **/
.post-date {
  float: right;
  margin: 0;
}

.post-title {
  clear: right;
}

.last-post {
  float: left;
}

.next-post {
  float: right;
}

pre {
  overflow: hidden;
  border-right: 1px dashed #CCC;
}

pre:hover {
  overflow: visible;
  border-right: none;
}

.gist {
  font-size: 12px;
}

